tests/vertical-slice/reject/lambda_actor_constructor.hew
import std::concurrency::lambda_actor;

fn main() {
    let _ = LambdaActorHandle::new(64, 0);
}
